# agentic-court

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  app.py  docker-compose.yml  main.py  pyproject.toml
experiments/: experiment_2.py  experiment_3.py  experiment_4.py  experiment_6.py  experiment_7.py  experiment_8.py
learning experiments/: experiment_1.py  experiment_2.py  experiment_5.py  experiment_6.py  experiment_7.py  experiment_8.py
scripts/: setup-gvisor.sh
src/: logger.py
src/agent/: agent.py  graph.py  state.py  tools.py
src/classes/: PolicyEngine.py  Tool.py  ToolCall.py  __init__.py  policy_engine.py  tool.py  verdict.py
src/modules/: governance.py  logger.py  sandbox.py  web_search.py
src/tools/: policy.py  sandbox_tools.py  shell_security.py  web_search.py
src/tribunal/: agents.py  governance.py  graph.py  security.py  state.py  tools.py
tests/: test_agent_routing.py  test_policy.py  test_shell_blocklist.py  test_verdicts.py  test_web_search.py
