[project]
name = "agentic-court"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "docker>=7.1.0",
    "gradio>=6.9.0",
    "langchain-ollama>=1.0.1",
    "langgraph>=1.1.2",
    "python-dotenv>=1.2.2",
    "tavily>=1.1.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
